[package]
name = "hotlib"
version = "0.1.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A library for watching, dynamically compiling, and hot-loading Rust libraries."
keywords = ["hotload", "crate", "lib", "dylib", "compile"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mitchmindtree/hotlib.git"
homepage = "https://github.com/mitchmindtree/hotlib"
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
humantime = "1.3"
libloading = "0.7.4"
notify = "=5.0.0-pre.1"
serde_json = "1"
slug = "0.1"
thiserror = "1"
